--- a/seed/files/config.json
+++ b/seed/files/config.json
@@ -3,8 +3,8 @@
     "$oid": "5f5ed0972e1dbc2a2c800507"
   },
   "key": "selenium_config",
-  "user_id": "jorge.bustillos@nestle.com",
-  "user_pass": "2021*January*2021",
+  "user_id": "*****",
+  "user_pass": "*******",
   "show_browser": true,
   "last_update": {
     "$date": "2021-02-09T08:30:35.593Z"
