--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -5,4 +5,9 @@ selenium==3.141.0
 gunicorn==20.0.4
 joblib==1.0.0
 xmltodict==0.12.0
+lxml==4.6.2
+pandas==1.2.2
+scipy==1.6.1
+sklearn==0.0
+nltk==3.5
 pyvirtualdisplay
